making seperate aggregation.js
