# app/controllers/publicController.js
@@ -24,18 +24,25 @@ const handleLoginC = async (req, res) => {
       .status(401)
       .json({ message: "Invalid email or password", error });
   }
-  res
-    .status(200)
-    .json({
-      message: "Login successful",
-      token: myUserData.token,
-      user: { ...myUserData.theUser, _id: undefined },
-    });
+  res.status(200).json({
+    message: "Login successful",
+    token: myUserData.token,
+    user: { ...myUserData.theUser, _id: undefined },
+  });
 };
 
 const handleRegisterC = async (req, res) => {
-  const { name, gender, email, aadhar_no, pan_no, mobile_no, password, confirmPassword} = req.body;
-  if (req.body.password != req.body.confirmPassword) {
+  const {
+    name,
+    gender,
+    email,
+    aadhar_no,
+    pan_no,
+    mobile_no,
+    password,
+    confirmPassword,
+  } = req.body;
+  if (password != confirmPassword) {
     return res.status(400).json({
       status: 400,
       message: "Password and Confirm Password does not match",
@@ -47,7 +54,7 @@ const handleRegisterC = async (req, res) => {
     confirmPassword: undefined,
   });
   return res.status(error ? 400 : 201).json({
-    users:[user],
+    users: [user],
     status: error ? 400 : 201,
     message: error ? error : "User Created",
   });
